fixed overflow

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,5 +1,6 @@
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 .body {
@@ -17,6 +18,7 @@ html {
     transition: 0.4s; /* Adds a transition effect when the padding is decreased */
     position: fixed; /* Sticky/fixed navbar */
     width: 100%;
+    max-width: 100vw;
     top: 0; /* At the top */
     z-index: 99;
     display: flex;
@@ -61,13 +63,14 @@ html {
   
   /* Display some links to the right */
   #navbar-right {
-    margin-right: 20px;
+    float:right;
+    margin-right: 1vw;
   }
 
   .section {
     height: 100vh;
     position: relative;
-    width: 100%;
+    max-width: 100%;
     scroll-margin-top: 85px;
     text-align: center;
     background-color: white;
@@ -237,7 +240,7 @@ html {
     position: fixed;
     right: 0;
     bottom: 0;
-    min-width: 100%; 
+    width: 100%; 
     min-height: 100%;
     z-index: -1;
   }
